# codebase_dexer

./: CONTRIBUTING.md  README.md  prd.md  requirements.txt  run_server.py  setup_and_test.sh  start.sh  stop.sh
mcp_server/: __init__.py  capabilities.py  index_store.py  main.py  mcp_handler.py
mvp/: .env  .env.template  README.md  SETUP.md  docker-compose.yml  pyproject.toml  setup.py  start_dev.sh
mvp/app/: config.py  main.py
mvp/app/database/: models.py  neo4j_client.py
mvp/app/indexer/: indexer.py  js_parser.py  parser.py
mvp/backend/: setup.py
mvp/backend/app/: __init__.py  main.py
mvp/backend/app/api/: __init__.py  code_graph.py  code_structure.py  file_content.py  file_tree.py  indexing.py  repositories.py  snapshots.py
mvp/backend/app/services/: __init__.py  indexer.py  neo4j_service.py
mvp/backend/data/: repositories.json
mvp/frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
mvp/frontend/mcp_code_indexer/mvp/frontend/: package-lock.json  package.json
mvp/frontend/src/: App.tsx  index.css
mvp/frontend/src/components/: CodeGraph.tsx  FilterPanel.tsx  GraphOptions.tsx  GraphView.tsx  IndexingProgress.tsx  IndexingSettings.tsx  Neo4jConsole.tsx  ScheduleSettings.tsx
mvp/frontend/src/components/ui/: checkbox.tsx  command.tsx  drawer.tsx
mvp/frontend/src/pages/: CodeExplorer.tsx  HomePage.tsx  index.tsx  snapshots.tsx
mvp/frontend/src/types/: graph.ts
mvp/tests/: test_indexer.py
