[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp_code_indexer"
version = "0.1.0"
description = "A tool for indexing and analyzing code structure using Neo4j"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Organization", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "python-dotenv>=0.19.0",
    "neo4j>=4.4.0",
    "pydantic>=1.8.0",
    "astroid>=2.8.0",
    "esprima>=4.0.0",
    "pytest>=6.2.0",
    "requests>=2.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.build.targets.wheel]
packages = ["app"] 